feature: select pagination segmetn
